<resources>
    <string name="app_name">Chess</string>
    <string name="board_description">Where you play chess</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="play_ai">Play AI</string>
    <string name="new_game">New game</string>
    <string name="hint_button_description">hint button</string>
    <string name="undo_button_description">undo button</string>
    <string name="redo_button_description">redo button</string>
</resources>
